fixed gaps in the board

--- a/frontend/src/app/components/game/game.component.css
+++ b/frontend/src/app/components/game/game.component.css
@@ -1,8 +1,9 @@
 #board {
   max-width: 100vw;
-  max-height: 80vh;
+  max-height: 84vh;
   aspect-ratio: 1;
   display: inline-block;
+  font-size: 0px;
 }
 
 .chess_row {
@@ -15,7 +16,6 @@
   height:12.5%;
   font-size: 0px;
   background-color: #4900BA;
-  border: 0px;
 }
 
 .odd_square {
